--- a/VeraServer/VeraServer.csproj
+++ b/VeraServer/VeraServer.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ListenServer.cs" />
+    <Compile Include="Model.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerDatabase.cs" />
     <Compile Include="Program.cs" />
